# gh-ci-watch

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  shell.nix  vite.config.ts
.github/: dependabot.yml
.github/workflows/: publish.yml
src/: App.css  App.tsx  main.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/src/: config.rs  fetcher.rs  github.rs  lib.rs  main.rs  poller_async.rs
src/components/: DeleteButton.tsx  Header.tsx  InputForm.tsx  LogoutButton.tsx  PrStatus.tsx  ProgressReport.tsx  RequestToken.tsx
src/components/ui/: ThemeModeToggle.tsx
src/lib/: storage.ts
src/routes/: Index.tsx  RequestToken.tsx
