[package]
name = "gh-actions-watch"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["notification-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6.3"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "time"] }
toml = "0.8.19"
dirs = "5.0.1"
sentry = "0.34.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
approx = "0.5.1"
httpmock = "0.7.0"
tauri = { version = "1", features = ["notification-all", "shell-open", "test"] }
